--- a/cinema-system/src/components/TicketPayment/_TicketPayment.css
+++ b/cinema-system/src/components/TicketPayment/_TicketPayment.css
@@ -1,6 +1,5 @@
 @import url('https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/css/bootstrap.min.css');
 
-
 .TicketPayment {
   display: flex;
   flex-direction: column;
@@ -27,6 +26,12 @@
   border: none;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.card:hover {
+  transform: scale(1.05);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
 .card-header {
@@ -45,6 +50,18 @@
 .btn-primary:hover {
   background-color: #0056b3;
   border-color: #004085;
+}
+
+.btn-success {
+  background-color: #28a745;
+  border-color: #28a745;
+  border-radius: 5px;
+  transition: background-color 0.3s, border-color 0.3s;
+}
+
+.btn-success:hover {
+  background-color: #218838;
+  border-color: #1e7e34;
 }
 
 .form-control {
